fix(multi): wrap DigitsField  + user 2FA ui fixes

--- a/plugins-structure/apps/politeia/src/pages/User/Details/styles.module.css
+++ b/plugins-structure/apps/politeia/src/pages/User/Details/styles.module.css
@@ -74,6 +74,15 @@
   margin-bottom: var(--spacing-1);
 }
 
+.totpCode {
+  display: flex;
+  align-items: center;
+}
+
+.totpCode > *:not(:first-child) {
+  margin-left: var(--spacing-medium);
+}
+
 @media (--sm-viewport) {
   .column:not(:first-child) {
     margin-top: var(--spacing-large);
